fix: setting group control alignment

--- a/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/custom-controls-rtl.css
@@ -5082,7 +5082,7 @@ input[type="text"].select2-search__field {
 }
 .ast-adv-toggle-icon {
   left: 2px;
-  top: 0;
+  top: -6px;
   position: absolute;
   width: 18px;
   height: 18px;
@@ -5183,7 +5183,7 @@ input[type="text"].select2-search__field {
 
 .ast-field-settings-wrap .ast-field-settings-modal {
   border-radius: 3px;
-  margin-top: 10px;
+  margin-top: 15px;
   margin-bottom: 20px;
 }
 
