--- a/inc/customizer/custom-controls/assets/css/unminified/settings-group-rtl.css
+++ b/inc/customizer/custom-controls/assets/css/unminified/settings-group-rtl.css
@@ -1,6 +1,6 @@
 .ast-adv-toggle-icon {
   left: 2px;
-  top: 0;
+  top: -6px;
   position: absolute;
   width: 18px;
   height: 18px;
@@ -101,7 +101,7 @@
 
 .ast-field-settings-wrap .ast-field-settings-modal {
   border-radius: 3px;
-  margin-top: 10px;
+  margin-top: 15px;
   margin-bottom: 20px;
 }
 
